tests/fixtures/invalid/pow_str_str_float.py
# Cannot call pow() with Str, Str, Float
x = pow("hello", "hello", 1.0)
